# OCS-Submission-Capsule-API

./: .gitignore  CHANGELOG.md  README.md  app.py  co_readme.md  ocs_job_commands_manifest.json  pyproject.toml
.github/workflows/: ci.yml  lint-and-test.yml  release.yml
ocs_submission/: __init__.py  __main__.py  config.jsonc  emails.py  execution.py  fastq_info_fetcher.py  fetch_fastq_ocs_records.py  main.py  notifications.py  ocs_cli.py  ocs_command_builder.py  running_jobs_db.py
ocs_submission/audit/: audit.py
scripts/: check_release_version.py
src/ocs_submission/: __init__.py  __main__.py  config.jsonc  emails.py  environment.py  fastq_info_fetcher.py  main.py  ocs_cli.py  ocs_command_builder.py  running_jobs_db.py  stages.py
src/ocs_submission/audit/: __init__.py  audit.py  lims_mtx_ocs.sql  lims_rtx_ocs.sql
tests/: conftest.py  test_check_release_version.py  test_emails.py  test_main_config.py  test_ocs_command_builder.py  test_running_jobs_db.py  test_stages.py
